Ready to Deploy

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -82,7 +82,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/48383166_2294518213901506_1768689904977444864_o.jpg");
+      background: url("../dist/img/Hatdog.jpg");
       border-radius: 50%;
       border: solid 3px $secondary-color;
       //   transform: scale(0.5);
