--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #333;
-$secondary-color: #ff4b2b;
+$secondary-color: #fff12b;
 $show-home-image: true;
-$home-image: url("../dist/img/volkswagen.jpg");
+$home-image: url("../dist/img/221870.jpg");
 $background-opacity: 0.5;
 
 @mixin easeOut {
