--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,7 +47,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url("../dist/img/small_jp.jpg");
+      background: url("/dist/img/Hatdog_small.jpg");
       width: 150px;
       height: 150px;
     }
